--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       My dearest <strong>Preethi</strong>,<br>
       It has been a wonderful journey traveling through life with you,
       full of love, laughter, and unforgettable memories.
-      Will you be my Valentine? 💖
+      Will you Marry me? 💖
     </p>
     <div class="buttons">
       <button id="yesBtn">Yes 😍</button>
@@ -160,7 +160,7 @@
 
   <div class="love-page" id="lovePage">
     <div class="hearts" id="hearts"></div>
-    <h2>Happy Valentine's Day 💖</h2>
+    <h2>Please Marry me 💖</h2>
     <div class="final-msg">
       My Love, you make my world brighter, my days happier, and my heart fuller.
       I am so grateful to have you by my side. Forever yours 💕<br><br>
