--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@
     <h2>Congrats 🎉 You won the test 💖</h2>
     <div class="final-msg">Proof that you know us perfectly 😍</div>
   </div>
-    <h2>Happy Valentine's Day 💖</h2>
+    <h2>You are Love of My Life 💖</h2>
     <div class="final-msg">
       My Love, you make my world brighter, my days happier, and my heart fuller.
       I am so grateful to have you by my side. Forever yours 💕<br><br>
-      — <strong>— Akash 💕</strong>
+      — <strong> Akash 💕</strong>
     </div>
   </div>
 
