--- a/index.html
+++ b/index.html
@@ -1,160 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Valentine Surprise 💖</title>
-
+  <meta charset="UTF-8" />
+  <title>Will You Be Mine 💖</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(#ffc0cb, #ffb6c1);
-      text-align: center;
-      color: #800040;
-    }
-
-    .page {
-      display: none;
+      padding: 0;
       min-height: 100vh;
-      padding: 20px;
-      box-sizing: border-box;
+      display: flex;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
+      background: linear-gradient(135deg, #ffb6c1, #ffc0cb, #ff69b4);
+      font-family: 'Segoe UI', sans-serif;
+      overflow-x: hidden;
     }
 
-    .active {
-      display: flex;
+    .container {
+      text-align: center;
+      background: rgba(255, 255, 255, 0.25);
+      padding: 30px 20px;
+      border-radius: 20px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+      backdrop-filter: blur(10px);
+      width: 90%;
+      max-width: 420px;
     }
 
-    h1, h2 {
+    h1 {
+      color: #c2185b;
+      font-size: 2.8rem;
       margin-bottom: 15px;
     }
 
+    p {
+      color: #880e4f;
+      font-size: 1.15rem;
+      margin-bottom: 30px;
+      line-height: 1.6;
+    }
+
+    .photo {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 5px solid #fff;
+      margin-bottom: 20px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+    }
+
+    .buttons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+
     button {
-      padding: 14px 20px;
-      margin: 10px;
-      font-size: 16px;
       border: none;
+      padding: 15px 35px;
+      font-size: 1.1rem;
       border-radius: 30px;
-      background: #ff4d88;
-      color: white;
       cursor: pointer;
-      width: 80%;
-      max-width: 280px;
+      transition: all 0.3s ease;
     }
 
-    button:hover {
-      background: #ff1a66;
+    #yesBtn {
+      background: #e91e63;
+      color: white;
     }
 
-    .message {
-      margin-top: 15px;
-      font-weight: bold;
+    #noBtn {
+      background: white;
+      color: #e91e63;
+      border: 2px solid #e91e63;
     }
 
-    .winner-page h1 {
-      animation: pop 1s infinite alternate;
+    #yesBtn:hover {
+      transform: scale(1.1);
+      box-shadow: 0 10px 20px rgba(233,30,99,0.4);
     }
 
-    @keyframes pop {
-      from { transform: scale(1); }
-      to { transform: scale(1.1); }
+    /* Love Page */
+    .love-page {
+      display: none;
+      position: absolute;
+      inset: 0;
+      background: radial-gradient(circle, #ffc0cb, #ff69b4);
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      color: white;
+      flex-direction: column;
+      padding: 30px;
+    }
+
+    .love-page h2 {
+      font-size: 3.5rem;
+      text-shadow: 0 0 20px rgba(255,255,255,0.7);
+      animation: glow 2s infinite alternate;
+    }
+
+    .final-msg {
+      font-size: 1.4rem;
+      margin-top: 20px;
+      max-width: 600px;
+    }
+
+    @keyframes glow {
+      from { opacity: 0.8; }
+      to { opacity: 1; }
+    }
+
+    .hearts {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      top: 0;
+      left: 0;
+    }
+
+    .heart {
+      position: absolute;
+      color: rgba(255,255,255,0.9);
+      font-size: 20px;
+      animation: float 6s linear infinite;
+    }
+
+    @keyframes float {
+      from { transform: translateY(100vh); opacity: 1; }
+      to { transform: translateY(-10vh); opacity: 0; }
     }
   </style>
 </head>
-
 <body>
 
-<!-- PAGE 1 -->
-<div class="page active" id="page1">
-  <h1>Will you be mine 💖</h1>
-  <p>It is a wonderful journey which I had travelled with you… please say yes 💕</p>
+  <!-- Background Music -->
+  <audio id="bgMusic" loop>
+    <source src="music.mp3" type="audio/mpeg">
+  </audio>
 
-  <button onclick="goQuiz()">Click here for a quick quiz</button>
-</div>
+  <div class="container" id="mainPage">
+    <img src="photo.jpg" alt="Our Photo" class="photo" />
+    <h1>Will You Be Mine 💕</h1>
+    <p>
+      My dearest <strong>Preethi</strong>,<br>
+      It has been a wonderful journey traveling through life with you,
+      full of love, laughter, and unforgettable memories.
+      Will you Marry me? 💖
+    </p>
+    <div class="buttons">
+      <button id="yesBtn">Yes 😍</button>
+      <button id="noBtn">No 🙈</button>
+    </div>
+  </div>
 
-<!-- QUIZ PAGE -->
-<div class="page" id="quizPage">
-  <h2>Quiz for you 💕</h2>
+  <div class="love-page" id="lovePage">
+    <div class="hearts" id="hearts"></div>
+    <h2>Please Marry me 💖</h2>
+    <div class="final-msg">
+      நீ தினம் சிரிச்சா போதுமே💕வேற எதுவும் வேணாமே💕நான் வாழவே… 
+நான் உன்ன ரசிச்சா போதுமே…வேற எதுவும் வேணாமே…நான் வாழவே… 💕<br><br>
+      — <strong> Akash 💕</strong>
+    </div>
+  </div>
 
-  <p id="question"></p>
+  <script>
+    const yesBtn = document.getElementById('yesBtn');
+    const noBtn = document.getElementById('noBtn');
+    const mainPage = document.getElementById('mainPage');
+    const lovePage = document.getElementById('lovePage');
+    const music = document.getElementById('bgMusic');
+    let scale = 1;
+    let noClicks = 0;
 
-  <button onclick="answer(1)">Option 1</button>
-  <button onclick="answer(2)">Option 2</button>
-  <button onclick="answer(3)">Option 3</button>
+    noBtn.addEventListener('click', () => {
+      noClicks++;
+      scale += 0.25;
+      yesBtn.style.transform = `scale(${scale})`;
 
-  <div class="message" id="feedback"></div>
-</div>
+      if (noClicks >= 4) {
+        noBtn.style.display = 'none';
+      }
+    });
 
-<!-- WINNER PAGE -->
-<div class="page winner-page" id="winnerPage">
-  <h1>🎉 Congrats you won the test 💖</h1>
+    yesBtn.addEventListener('click', () => {
+      mainPage.style.display = 'none';
+      lovePage.style.display = 'flex';
+      music.play();
+      createHearts();
+    });
 
-  <h2>You're Love of my Life ❤️</h2>
-
-  <p class="message">
-    My Love, you make my world brighter, my days happier, and my heart fuller.<br>
-    I am so grateful to have you by my side. Forever yours ❤️<br><br>
-    <strong>Akash ❤️</strong>
-  </p>
-</div>
-
-<script>
-  let q = 1;
-
-  const question = document.getElementById("question");
-  const buttons = document.querySelectorAll("#quizPage button");
-  const feedback = document.getElementById("feedback");
-
-  function goQuiz() {
-    document.getElementById("page1").classList.remove("active");
-    document.getElementById("quizPage").classList.add("active");
-    loadQuestion();
-  }
-
-  function loadQuestion() {
-    feedback.innerHTML = "";
-
-    if (q === 1) {
-      question.innerText = "Who is the absolute boss in this relationship?";
-      buttons[0].innerText = "Obviously you";
-      buttons[1].innerText = "Me";
-      buttons[2].innerText = "My Mom";
-    }
-
-    if (q === 2) {
-      question.innerText = "Who fights the most?";
-      buttons[0].innerText = "You";
-      buttons[1].innerText = "Only you";
-      buttons[2].innerText = "Maybe me";
-    }
-  }
-
-  function answer(choice) {
-    if (q === 1) {
-      if (choice === 1) {
-        feedback.innerText = "Yes correct baby 💕 it’s only you!";
-        q++;
-        setTimeout(loadQuestion, 1000);
-      } else if (choice === 2) {
-        feedback.innerText = "Oops 😝 try again you fool";
-      } else {
-        feedback.innerText = "Yes you are absolutely stupid 🤭";
+    function createHearts() {
+      const heartsContainer = document.getElementById('hearts');
+      for (let i = 0; i < 40; i++) {
+        const heart = document.createElement('div');
+        heart.classList.add('heart');
+        heart.innerHTML = '❤';
+        heart.style.left = Math.random() * 100 + 'vw';
+        heart.style.animationDuration = 3 + Math.random() * 4 + 's';
+        heart.style.fontSize = 15 + Math.random() * 25 + 'px';
+        heartsContainer.appendChild(heart);
       }
     }
-
-    else if (q === 2) {
-      if (choice === 3) {
-        feedback.innerText = "Oops 😝 try again you fool";
-      } else {
-        document.getElementById("quizPage").classList.remove("active");
-        document.getElementById("winnerPage").classList.add("active");
-      }
-    }
-  }
-</script>
+  </script>
 
 </body>
 </html>
