--- a/index.html
+++ b/index.html
@@ -220,6 +220,10 @@
     }
   }
 
+  <script>
+  let q = 1;
+  let correctAnswers = 0;
+
   function answer(choice) {
     // QUESTION 1
     if (q === 1) {
@@ -253,6 +257,7 @@
     }
   }
 </script>
+
 
  
 </body>
