--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -220,45 +221,26 @@
     }
   }
 
-  <script>
-  let q = 1;
-  let correctAnswers = 0;
-
-  function answer(choice) {
-    // QUESTION 1
+  function answer(c) {
     if (q === 1) {
-      if (choice === 1) {
+      if (c === 1) {
         feedback.innerText = "yes correct baby its only you";
-        correctAnswers++;
-        q++;
-        setTimeout(loadQuestion, 1000);
-      } else if (choice === 2) {
+        q++; setTimeout(loadQuestion, 1000);
+      } else if (c === 2) {
         feedback.innerText = "oops try again you fool";
       } else {
         feedback.innerText = "yes you are absolutely stupid";
       }
-    }
-
-    // QUESTION 2
-    else if (q === 2) {
-      if (choice === 3) {
-        feedback.innerText = "oops try again you fool";
+    } else {
+      if (c === 3) {
+        document.getElementById('quizPage').classList.remove('active');
+        document.getElementById('winnerPage').classList.add('active');
       } else {
         feedback.innerText = "Yes sweetheart its always you 😊";
-        correctAnswers++;
-
-        if (correctAnswers === 2) {
-          setTimeout(() => {
-            document.getElementById("quizPage").classList.remove("active");
-            document.getElementById("winnerPage").classList.add("active");
-          }, 1000);
-        }
       }
     }
   }
 </script>
 
-
- 
 </body>
 </html>
